<resources>
    <string name="about_header_about">About</string>
    <string name="about_header_license">License</string>
    <string name="about_header_support">Support</string>
    <string name="app_credits">Copyright 2010&#8211;2016 by David A. Parker</string>
    <string name="app_license">CheckValve is free software under the terms of the GNU General Public License version 3.</string>
    <string name="app_name">CheckValve 2.0-dev</string>
    <string name="app_support">        
        &#8226; <a href="https://sites.google.com/site/checkvalveapp">Visit the CheckValve website</a>\n\n
        &#8226; <a href="https://groups.google.com/forum/#!forum/checkvalve">Join the CheckValve community forum</a>\n\n
        &#8226; <a href="https://github.com/daparker/checkvalve/issues">Report an issue on GitHub</a>\n\n
        &#8226; <a href="https://sites.google.com/site/checkvalveapp/documentation/app/change-log">View the change log</a>\n\n
        &#8226; <a href="mailto:checkvalvedev@gmail.com">E-mail the developer</a></string>
    <string name="app_version">CheckValve version 2.0.6-dev</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_connect">Connect</string>
    <string name="button_delete">Delete</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_edit">Edit</string>
    <string name="button_ellipsis">&#8230;</string>
    <string name="button_minus">-</string>
    <string name="button_move_down">Down</string>
    <string name="button_move_up">Up</string>
    <string name="button_plus">+</string>
    <string name="button_restore">Restore</string>
    <string name="button_save">Save</string>
    <string name="button_say">Say</string>
    <string name="button_search">Search</string>
    <string name="button_send">Send</string>
    <string name="button_submit">Submit</string>
    <string name="button_toggle_disabled">Disabled</string>
    <string name="button_toggle_enabled">Enabled</string>
    <string name="button_toggle_visible">Enable/Disable</string>
    <string name="button_x">&#10005;</string>
    <string name="default_chat_relay_port">23456</string>
    <string name="default_query_port">27015</string>
    <string name="default_query_timeout">1</string>
    <string name="header_kills">Kills</string>
    <string name="header_player">Player</string>
    <string name="header_time">Time</string>
    <string name="help_text_create_backup">The backup file will be saved in the %1$s folder on your device.</string>
    <string name="help_text_restore_backup">The backup file must exist in the %1$s folder on your device.</string>
    <string name="hint_chatui_say">Say something&#8230;</string>
    <string name="label_backup_file">Backup File:</string>
    <string name="label_backup_app_version">App:</string>
    <string name="label_backup_date">Date:</string>
    <string name="label_backup_size">Size:</string>
    <string name="label_chat_relay_password">Chat Relay Password:</string>
    <string name="label_current_folder">Current Folder:</string>
    <string name="label_do_not_show">Don\'t show me this again</string>
    <string name="label_game">Game:</string>
    <string name="label_include_servers">Include servers</string>
    <string name="label_include_settings">Include settings</string>
    <string name="label_ip">IP/Port:</string>
    <string name="label_map">Map:</string>
    <string name="label_nickname">Nickname:</string>
    <string name="label_nickname_field">Nickname (optional):</string>
    <string name="label_ping">Ping:</string>
    <string name="label_players">Players:</string>
    <string name="label_playersearch">Look For:</string>
    <string name="label_port">Port:</string>
    <string name="label_rcon_password">RCON Password (optional):</string>
    <string name="label_save_as">Save As:</string>
    <string name="label_server">Server:</string>
    <string name="label_show_password">Show password</string>
    <string name="label_tags">Tags:</string>
    <string name="label_timeout">Timeout (in seconds):</string>
    <string name="menu_about">About CheckValve</string>
    <string name="menu_add_server">Add Server</string>
    <string name="menu_back">Back</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_clear_console">Clear Console</string>
    <string name="menu_create_a_backup">Create a Backup</string>
    <string name="menu_debug">Show Debug Messages</string>
    <string name="menu_delete_server">Delete Server</string>
    <string name="menu_edit_server">Edit Server</string>
    <string name="menu_manage_servers">Manage Server List</string>
    <string name="menu_move_down">Move Down</string>
    <string name="menu_move_up">Move Up</string>
    <string name="menu_new_server">Add New Server</string>
    <string name="menu_player_search">Player Search</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_rcon">RCON</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_restore_a_backup">Restore a Backup</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_show_players">Show Players</string>
    <string name="menu_view_chat">View Chat</string>
    <string name="msg_backup_file_created">The backup file has been created.</string>
    <string name="msg_backup_file_create_failed">Failed to create the backup file.</string>
    <string name="msg_backup_file_does_not_exist">The specified file already exists.</string>
    <string name="msg_backup_file_exists">The specified file already exists.</string>
    <string name="msg_backup_file_invalid">The backup file is invalid.</string>
    <string name="msg_backup_file_restored">The backup data has been restored.</string>
    <string name="msg_backup_storage_not_mounted">External storage is not mounted.</string>
    <string name="msg_backup_no_files">This folder does not contain any backup files or subfolders.</string>
    <string name="msg_bad_default_query_port_value">Invalid query port value. Please try again.</string>
    <string name="msg_bad_default_relay_port_value">Invalid Chat Relay port value. Please try again.</string>
    <string name="msg_bad_freq_value">Invalid query frequency value. Please try again.</string>
    <string name="msg_bad_port_value">Invalid port value. Please try again.</string>
    <string name="msg_bad_timeout_value">Invalid timeout value. Please try again.</string>
    <string name="msg_chat_connect_failure">Failed to open a connection to the Chat Relay.</string>
    <string name="msg_chat_connect_success">Connected to the Chat Relay.</string>
    <string name="msg_chat_connection_lost">The connection was lost.</string>
    <string name="msg_chat_connection_refused">Connection refused:</string>
    <string name="msg_chat_disconnected">Disconnected from the Chat Relay.</string>
    <string name="msg_chat_not_started">Failed to start the Chat Relay client.</string>
    <string name="msg_cleared_relay_list">The list of previous Chat Relay hosts has been cleared.</string>
    <string name="msg_connection_error">A connection error has occurred.</string>
    <string name="msg_connection_lost">The network connection has been lost.</string>
    <string name="msg_db_failure">A database error has occurred.</string>
    <string name="msg_debug_log_empty">The debug log is empty.</string>
    <string name="msg_debug_mode_enabled">Debug mode enabled.</string>
    <string name="msg_debug_mode_disabled">Debug mode disabled.</string>
    <string name="msg_delete_server">Are you sure you want to delete this server?</string>
    <string name="msg_empty_fields">Please complete all required fields.</string>
    <string name="msg_empty_rcon_command">Please enter a command.</string>
    <string name="msg_empty_rcon_password">You must supply an RCON password.</string>
    <string name="msg_empty_server_list">The server list is currently empty.</string>
    <string name="msg_font_size">Font size</string>
    <string name="msg_general_error">Oops! An error has occurred."</string>
    <string name="msg_network_change">A network change has been detected.</string>
    <string name="msg_no_challenge_response">No challenge response from\n%1$s</string>
    <string name="msg_no_players">The server is currently empty.</string>
    <string name="msg_no_rcon_auth">RCON authentication failed.</string>
    <string name="msg_no_response">No response from %1$s</string>
    <string name="msg_no_search_results">No matches were found.</string>
    <string name="msg_no_tags">(None)</string>
    <string name="msg_options_reset">\"Don\'t show me this again\" options have been reset.</string>
    <string name="msg_rcon_ban_exception">You have been banned from this server.</string>
    <string name="msg_rcon_disconnected">The connection has been lost.</string>
    <string name="msg_rcon_general_error">An error has occurred. Please try again.</string>
    <string name="msg_rcon_sending">Sending</string>
    <string name="msg_rcon_timeout_exception">The connection timed out. Please try again.</string>
    <string name="msg_restore_backup">This action will overwrite any existing servers and settings in CheckValve. Are you sure?</string>
    <string name="msg_send_unsafe_command">This command will stop the server. Are you sure?</string>
    <string name="msg_server_deleted">The server has been deleted.</string>
    <string name="msg_server_validation_failed">An error occurred while validating the server.</string>
    <string name="msg_success">The server information has been saved.</string>
    <string name="msg_unable_to_connect">Unable to connect.</string>
    <string name="msg_unable_to_connect_to">Unable to connect to %1$s</string>
    <string name="msg_unknown_host">Unknown host %1$s</string>
    <string name="note_android_version_support"><b>Your device is running and old version of Android.</b>\n\nThe next release of CheckValve will only support devices running Android 3.0 (Honeycomb) and above.  You may continue using this version of CheckValve on your device, but if you wish to use any future versions, please upgrade to a newer device or Android version.</string>
    <string name="note_chat_relay_required">This feature requires the use of a CheckValve Chat Relay.  The Chat Relay receives log messages from the game server and relays player chats to CheckValve.  If you do not currently have a Chat Relay, it\'s easy to set one up and start using this feature.\n\nDocumentation and downloads can be found at the following URL:\n\nhttps://sites.google.com/site/checkvalveapp/chatrelay</string>
    <string name="notification_multiple_servers_down">%1$s servers are not responding.</string>
    <string name="notification_single_server_down">1 server is not responding.</string>
    <string name="notification_ticker_text">CheckValve Server Notification</string>
    <string name="notification_title">CheckValve Notification</string>
    <string name="playing_on">%1$s is playing on %2$s</string>
    <string name="settings_background_query_frequency">Query frequency (minutes)</string>
    <string name="settings_create_backup">Create a new backup</string>
    <string name="settings_clear_saved_relays">Clear previous Chat Relay hosts</string>
    <string name="settings_default_chat_relay_host">Chat Relay Host</string>
    <string name="settings_default_chat_relay_password">Chat Relay Password</string>
    <string name="settings_default_chat_relay_port">Chat Relay Port</string>
    <string name="settings_default_query_port">Default query port</string>
    <string name="settings_default_query_timeout">Default query timeout</string>
    <string name="settings_enable_background_queries">Enable background server queries</string>
    <string name="title_confirm_delete">Confirm Delete</string>
    <string name="title_edit_server">Edit Server Information</string>
</resources>