<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2015 by David A. Parker <parker.david.a@gmail.com>

This file is part of CheckValve, an HLDS/SRCDS query app for Android.

CheckValve is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation.

CheckValve is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with the CheckValve source code.  If not, see
<http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/updateserver_scroll_pane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262626"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/updateserver_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/updateserver_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="15dip"
            android:text="@string/title_edit_server"
            android:textColor="#FFFFFF"
            android:textSize="18.0sp" />

        <TableLayout
            android:id="@+id/updateserver_main_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:stretchColumns="0" >

            <TableRow>

                <TextView
                    android:id="@+id/label_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:singleLine="true"
                    android:text="@string/label_server"
                    android:textSize="12.0sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/field_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="14.0sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingTop="10.0dip"
                    android:singleLine="true"
                    android:text="@string/label_port"
                    android:textSize="12.0sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/field_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="@string/default_query_port"
                    android:textSize="14.0sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_timeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingTop="10.0dip"
                    android:singleLine="true"
                    android:text="@string/label_timeout"
                    android:textSize="12.0sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/field_timeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="@string/default_query_timeout"
                    android:textSize="14.0sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_rcon_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingTop="10.0dip"
                    android:singleLine="true"
                    android:text="@string/label_rcon_password"
                    android:textSize="12.0sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/field_rcon_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:text=""
                    android:textSize="14.0sp" />
            </TableRow>
        </TableLayout>
        
        <LinearLayout
            android:id="@+id/show_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingLeft="15dp" >
            
        <CheckBox
            android:id="@+id/checkbox_show_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_show_password"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:onClick="showPasswordCheckboxHandler"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/button_cancel" />
            
            <Button
                android:id="@+id/saveButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/button_save" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>